--- a/PersonalDashboardApp/PersonalDashboardApp.csproj
+++ b/PersonalDashboardApp/PersonalDashboardApp.csproj
@@ -25,4 +25,12 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Page Update="FinanceModule\Views\FinanceView.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
+
 </Project>
